# ChangeLog for dev-util/subversion
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.254 2007/04/17 14:52:42 opfer Exp $

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  files/70svn-gentoo.el:
  changed Emacs support from mandatory loading to autoload, Emacs starts up
  faster that way. Fixes bug 174471

  22 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> subversion-1.1.3.ebuild,
  subversion-1.2.3-r3.ebuild, subversion-1.3.2-r3.ebuild,
  subversion-1.4.3.ebuild:
  Use category with best_version. (bug #152746)

  18 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> subversion-1.4.3.ebuild:
  Fix a stupid bug from the apache2.2 detection from bug #152746

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  subversion-1.4.3.ebuild:
  straightened update of Emacs files in pkg_postinstall

  05 Mar 2007; Marius Mauch <genone@gentoo.org> subversion-1.1.3.ebuild,
  subversion-1.2.3-r3.ebuild, subversion-1.3.2-r3.ebuild,
  subversion-1.4.3.ebuild:
  Replacing einfo with elog

  03 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> subversion-1.4.3.ebuild:
  Fix bug #108777 by preferring the apr version apache was linked against.
  When apache2 support is not needed, prefer the 1.x apr(-util). This is
  largely based on the patches by Brian Tarricone <bjt23@cornell.edu> and
  Georgi Georgiev <chutz@gg3.net>.

  03 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> files/70svn-gentoo.el,
  subversion-1.4.3.ebuild:
  Fix the emacs binding to work with newer emacs versions that don't need the 
  packed vc-svn library, but use their own (newer) one instead. This fixes bug
  #158891. Thanks to Ulrich Mueller <ulm@kph.uni-mainz.de> for providing this
  solution.

  02 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> -subversion-1.2.3.ebuild,
  -subversion-1.2.3-r2.ebuild, -subversion-1.3.0.ebuild,
  -subversion-1.3.1.ebuild, -subversion-1.3.2.ebuild,