@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.3.2-r3.ebuild,v 1.16 2007/03/22 16:13:53 pauldv Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.3.2-r3.ebuild,v 1.17 2007/04/28 21:31:54 tove Exp $
 
 EAPI="prefix"
 
@@ -235,8 +235,8 @@ EOF
 	newbin contrib/client-side/svn_load_dirs.pl svn-load-dirs
 
 	# Install svnserve init-script and xinet.d snippet, bug 43245
-	exeinto /etc/init.d ; newexe ${FILESDIR}/svnserve.initd svnserve
-	insinto /etc/conf.d ; newins ${FILESDIR}/svnserve.confd svnserve
+	newinitd ${FILESDIR}/svnserve.initd svnserve
+	newconfd ${FILESDIR}/svnserve.confd svnserve
 	insinto /etc/xinetd.d ; newins ${FILESDIR}/svnserve.xinetd svnserve
 
 	# Install documentation
