@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.3.ebuild,v 1.9 2007/03/22 16:13:53 pauldv Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.3.ebuild,v 1.11 2007/04/29 18:24:38 tove Exp $
 
 EAPI="prefix"
 
@@ -248,14 +248,13 @@ EOF
 	newbin contrib/client-side/svn_load_dirs.pl svn-load-dirs
 
 	# Install svnserve init-script and xinet.d snippet, bug 43245
-	exeinto /etc/init.d ; newexe ${FILESDIR}/svnserve.initd svnserve
+	newinitd ${FILESDIR}/svnserve.initd svnserve
 	insinto /etc/xinetd.d ; newins ${FILESDIR}/svnserve.xinetd svnserve
 
-	insinto /etc/conf.d
 	if use apache2 >/dev/null; then
-		newins ${FILESDIR}/svnserve.confd svnserve
+		newconfd ${FILESDIR}/svnserve.confd svnserve
 	else
-		newins ${FILESDIR}/svnserve.confd2 svnserve
+		newconfd ${FILESDIR}/svnserve.confd2 svnserve
 	fi
 
 	# Install documentation
