@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.254 2007/04/17 14:52:42 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.255 2007/04/28 21:31:54 tove Exp $
+
+  28 Apr 2007; Torsten Veller <tove@gentoo.org> subversion-1.1.3.ebuild,
+  subversion-1.2.3-r3.ebuild, subversion-1.3.2-r3.ebuild,
+  subversion-1.4.3.ebuild:
+  Fix *initd, *confd and *envd calls (#173884, #174266)
 
   17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   files/70svn-gentoo.el:
